[gd_scene load_steps=3 format=3 uid="uid://dy7tkbbokgle6"]

[ext_resource type="Script" path="res://PlatformScript.gd" id="1_2kq6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci8br"]
size = Vector2(64, 5.5)

[node name="Platform" type="StaticBody2D"]
position = Vector2(16, 0)
script = ExtResource("1_2kq6k")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(40, 3)
shape = SubResource("RectangleShape2D_ci8br")

[node name="PlayerChecker" type="Area2D" parent="."]
collision_mask = 3

[node name="collider" type="CollisionShape2D" parent="PlayerChecker"]
position = Vector2(40, 0)
shape = SubResource("RectangleShape2D_ci8br")

[connection signal="body_entered" from="PlayerChecker" to="." method="_on_player_checker_body_entered"]
[connection signal="body_exited" from="PlayerChecker" to="." method="_on_player_checker_body_exited"]
